fix button spacing

--- a/src/receipts/receipt-comments/receipt-comments.component.scss
+++ b/src/receipts/receipt-comments/receipt-comments.component.scss
@@ -3,3 +3,7 @@
 .reply-button {
   color: $basic-gray !important;
 }
+
+.content-margin {
+  margin-left: 50px;
+}
